force-app/main/default/objects/Engagement_Counterparty_Contact__c/Engagement_Counterparty_Contact__c.object-meta.xml
<CustomObject>
    <description>Custom object to track contacts from engagement counterparties for engaged deals/projects.</description>
    <label>Engagement Counterparty Contact</label>
    <nameField>
        <displayFormat>ECC-{000000}</displayFormat>
        <label>Counterparty Contact #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Counterparty Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>