force-app/main/default/objects/Engagement_Counterparty_Contact__c/fields/ContactEmail__c.field-meta.xml
<CustomField>
    <fullName>ContactEmail__c</fullName>
    <description>Contact&apos;s email address to be used when send a custom email.</description>
    <formula>Contact__r.Email</formula>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>