force-app/main/default/objects/Engagement_Counterparty_Contact__c/fields/Counterparty__c.field-meta.xml
<CustomField>
    <fullName>Counterparty__c</fullName>
    <label>Counterparty</label>
    <referenceTo>Engagement_Counterparty__c</referenceTo>
    <relationshipLabel>Engagement Counterparty Contacts</relationshipLabel>
    <relationshipName>Engagement_Counterparty_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>