force-app/main/default/objects/Engagement_Counterparty_Contact__c/fields/ECC_Unique__c.field-meta.xml
<CustomField>
    <fullName>ECC_Unique__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>ECC_Unique</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>