force-app/main/default/objects/Engagement_Counterparty_Contact__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <formula>Counterparty__r.Engagement__c</formula>
    <label>Engagement</label>
    <type>Text</type>
</CustomField>