force-app/main/default/objects/Engagement_Counterparty_Contact__c/fields/Engagement_Name__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Name__c</fullName>
    <formula>Counterparty__r.Engagement_Name__c</formula>
    <label>Engagement Name</label>
    <type>Text</type>
</CustomField>