force-app/main/default/objects/Engagement_Counterparty_Contact__c/fields/EngagementFullID__c.field-meta.xml
<CustomField>
    <fullName>EngagementFullID__c</fullName>
    <formula>CASESAFEID( Engagement__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EngagementFullID</label>
    <type>Text</type>
</CustomField>