force-app/main/default/objects/Engagement_Counterparty_Contact__c/fields/Report_Counterparty_Contact_Fields__c.field-meta.xml
<CustomField>
    <fullName>Report_Counterparty_Contact_Fields__c</fullName>
    <description>Reporting Use
0 = Full Name
1 = First Name
2 = Middle Name
3 = Last Name
4 = Account Name
5 = Phone
6 = Title
7 = Email</description>
    <formula>Contact__r.Contact_Full_Name__c + &apos;|01|&apos; + Contact__r.FirstName + &apos;|02|&apos; + Contact__r.MiddleName + &apos;|03|&apos; + Contact__r.LastName + &apos;|04|&apos; +  Contact__r.Account.Name + &apos;|05|&apos; +  Contact__r.Phone + &apos;|06|&apos; + Contact__r.Title + &apos;|07|&apos; + Contact__r.Email</formula>
    <label>Report Counterparty Contact Fields</label>
    <type>Text</type>
</CustomField>